Clean the reviews content

--- a/src/notebooks/Exploratory Data Analysis.ipynb
+++ b/src/notebooks/Exploratory Data Analysis.ipynb
@@ -10,12 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "2e87b46b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import plotly.express as px\n"
    ]
   },
   {
@@ -28,63 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "0af7cfbb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../data/ubs-mobile-app-reviews.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "75ba3eeb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1572, 11)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "d77d672f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Unnamed: 0', 'reviewId', 'userName', 'userImage', 'content', 'score',\n",
-       "       'thumbsUpCount', 'reviewCreatedVersion', 'at', 'replyContent',\n",
-       "       'repliedAt'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
+    "df = pd.read_csv(\"../../data/ubs-mobile-app-reviews.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f644cf6d",
+   "id": "75ba3eeb",
    "metadata": {},
    "outputs": [
     {
@@ -105,6 +61,51 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "d77d672f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 'reviewId', 'userName', 'userImage', 'content', 'score',\n",
+       "       'thumbsUpCount', 'reviewCreatedVersion', 'at', 'replyContent',\n",
+       "       'repliedAt'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f644cf6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1572, 11)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "90c57269",
    "metadata": {},
    "outputs": [
@@ -349,7 +350,7 @@
        "9  We apologize for the inconvenience. Please try...  2022-05-30 17:20:57  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,6 +363,17 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9546c636",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores_df = df.groupby(by=[\"score\"]).size().reset_index(name=\"counts\")\n",
+    "px.bar(data_frame=scores_df, x=\"score\",y=\"counts\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d25d4db",
    "metadata": {},
    "outputs": [],
    "source": []
